Use minotar for now

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,8 @@ block content
                     div.player
                         p.playername= player
                         br
-                        img.avatar(src="./images/steve.png")
-                        //img.avatar(src="https://minotar.net/avatar/#{player}/49.png")
+                        //img.avatar(src="./images/steve.png")
+                        img.avatar(src="https://minotar.net/avatar/#{player}/49.png")
                         br
                         p.kdr= score
         div.blueplayers
@@ -20,8 +20,8 @@ block content
                     div.player
                         p.playername= player
                         br
-                        img.avatar(src="./images/steve.png")
-                        //img.avatar(src="https://minotar.net/avatar/#{player}/49.png")
+                        //img.avatar(src="./images/steve.png")
+                        img.avatar(src="https://minotar.net/avatar/#{player}/49.png")
                         br
                         p.kdr= score
     div.points
