--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,12 +29,18 @@ body {
 }
 
 .talents {
-    display: block;
-    position: absolute;
+    display: inline-block;
     text-align: center;
-    width: 30px;
-    top: 15px;
-    left: 57px;
+    position: absolute;
+    margin-left: -4px;
+    padding-right: 10px
+}
+
+.talentscontainer {
+    width: 25px;
+    position: relative;
+    right: 32px;
+    top: 16px;
 }
 
 .talent {
