--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,46 @@ body {
     /*background: rgba(0, 183, 255, 0.27);*/
 }
 
+.announce {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 250px;
+    height: 49px;
+    background-color: #777777;
+    opacity: 0;
+
+    transition: all 500ms;
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
+}
+
+.announceplayer {
+    width: 100%;
+    font-size: 24px;
+    text-align: center;
+}
+
+.announcemessage {
+    position: absolute;
+    font-size: 20px;
+    top: 25px;
+    left: 60px;
+    text-align: center;
+}
+
+.show {
+    opacity: 1;
+}
+
+.hide {
+    opacity: 0;
+}
+
 .player {
     display: inline-block;
     text-align: center;
