--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ body {
     margin: auto;
     left: 0;
     right: 0;
-    top: 0;
+    top: 30%;
     bottom: 0;
     width: 250px;
     height: 49px;
