Test new announcy stuff

--- a/views/index.jade
+++ b/views/index.jade
@@ -83,6 +83,32 @@ block content
         p.announceplayer= "Cryptite"
         br
         p.announcemessage= "First Blood"
+    div.redstats
+        table
+            thead
+                tr
+                    th= ""
+                    th= "Name"
+                    th= "KDR"
+                    th= "CPG"
+            tbody.redstatsbody
+                tr
+                    th= "Cryptite"
+                    th= "1"
+                    th= "2"
+    div.bluestats
+        table
+            thead
+                tr
+                    th= ""
+                    th= "Name"
+                    th= "KDR"
+                    th= "CPG"
+            tbody.bluestatsbody
+                tr
+                    th= "Cryptite"
+                    th= "1"
+                    th= "2"
 
     script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js")
     script(src="./js/main.js")
