--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,12 +23,15 @@ body {
     margin: auto;
     left: 0;
     right: 0;
-    top: 30%;
-    bottom: 0;
-    width: 250px;
-    height: 49px;
-    background-color: #777777;
+    top: 0;
+    bottom: 60%;
+    width: 300px;
+    height: 70px;
+    background-color: rgba(116, 116, 119, 0.33);
+    border-radius: 5px;
     opacity: 0;
+    border-top: 2px solid #c5c6c1;
+    border-bottom: 2px solid #c5c6c1;
 
     transition: all 500ms;
     -webkit-transition: all 500ms ease-in-out;
@@ -37,25 +40,28 @@ body {
 }
 
 .announceplayer {
-    width: 100%;
-    font-size: 24px;
+    position: absolute;
+    width: 75%;
+    top: 0;
+    font-size: 32px;
     text-align: center;
+    text-shadow: 4px 4px #0c0c0c;
 }
 
 .announcemessage {
     position: absolute;
-    font-size: 20px;
-    top: 25px;
-    left: 60px;
+    width: 75%;
+    font-size: 26px;
+    top: 35px;
+    left: 40px;
     text-align: center;
 }
 
-.show {
-    opacity: 1;
-}
-
-.hide {
-    opacity: 0;
+.announceavatar {
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 11px;
+    /*border: 2px solid #fff;*/
 }
 
 .player {
@@ -162,4 +168,97 @@ p {
     display: inline;
     vertical-align: top;
     margin-top: 5px;
+}
+
+.redstats {
+    position: absolute;
+    left: 170px;
+    width: 300px;
+    top: 200px;
+    opacity: 0;
+
+    transition: all 500ms;
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
+}
+
+.bluestats {
+    position: absolute;
+    right: 300px;
+    width: 300px;
+    top: 200px;
+    opacity: 0;
+
+    transition: all 500ms;
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
+}
+
+.statsavatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.show {
+    opacity: 1;
+}
+
+.hide {
+    opacity: 0;
+}
+
+table {
+    border-collapse: collapse;
+    margin-bottom: 3em;
+    width: 100%;
+    background: #fff;
+
+    border-radius: 5px;
+    border-top: 2px solid #c5c6c1;
+    border-bottom: 2px solid #c5c6c1;
+}
+
+td, th {
+    padding: .2em 1.5em;
+    text-align: left;
+    font-size: 18px;
+}
+
+td.err {
+    background-color: #e992b9;
+    color: #fff;
+    font-size: 0.75em;
+    text-align: center;
+    line-height: 1;
+}
+
+.redstats th {
+    background-color: rgba(196, 35, 36, 1);
+    font-weight: bold;
+    color: #fff;
+    white-space: nowrap;
+}
+
+.bluestats th {
+    background-color: rgba(65, 131, 196, 1);
+    font-weight: bold;
+    color: #fff;
+    white-space: nowrap;
+}
+
+tbody th {
+    background-color: #4183C4;
+}
+
+tbody tr:nth-child(2n-1) {
+    background-color: #f5f5f5;
+    transition: all .125s ease-in-out;
+}
+
+tbody tr:hover {
+    background-color: rgba(129, 208, 177, .3);
 }
