Don't show tables on announces

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,6 +61,7 @@ body {
     border-radius: 5px;
     overflow: hidden;
     margin-top: 11px;
+    margin-left: 10px;
     /*border: 2px solid #fff;*/
 }
 
