--- a/views/index.jade
+++ b/views/index.jade
@@ -89,11 +89,13 @@ block content
                 tr
                     th= ""
                     th= "Name"
+                    th= "Score"
                     th= "KDR"
                     th= "CPG"
             tbody.redstatsbody
                 tr
                     th= "Cryptite"
+                    th= "1"
                     th= "1"
                     th= "2"
     div.bluestats
@@ -102,13 +104,16 @@ block content
                 tr
                     th= ""
                     th= "Name"
+                    th= "Score"
                     th= "KDR"
                     th= "CPG"
             tbody.bluestatsbody
                 tr
                     th= "Cryptite"
+                    th= "3"
                     th= "1"
                     th= "2"
 
     script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js")
     script(src="./js/main.js")
+    script(src="./js/velocity.min.js")
