--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,6 @@ html
         //meta(http-equiv="refresh" content="5")
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
-        //script(src='/js/data.js')
+        script(src="./js/modernizr.js")
     body
         block content
