--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body {
     left: 30%;
     /*width: 560px;*/
     bottom: 0;
-    background: rgba(255, 49, 27, 0.68);
+    background: #df4f2d;
     border-radius: 5px;
 
     transition: all 500ms;
@@ -21,7 +21,7 @@ body {
     right: 30%;
     /*width: 560px;*/
     bottom: 0;
-    background: rgba(0, 183, 255, 0.73);
+    background: #5f90b0;
 
     transition: all 500ms;
     -webkit-transition: all 500ms ease-in-out;
@@ -108,24 +108,20 @@ body {
 }
 
 .playername {
-    width: 70px;
-    font-size: 9px;
+    width: 100%;
+    font-size: 14px;
     text-align: center;
     font-weight: bold;
 }
 
 .avatar {
-    top: 2px;
-    left: 0;
-    float: left;
+    width: 100%;
 }
 
 .playerscore {
-    font-size: 13px;
+    font-size: 20px;
     text-align: center;
-    float: left;
-    margin-top: 2px;
-    width: 50px;
+    width: 100%;
     font-weight: bold;
 }
 
