--- a/views/index.jade
+++ b/views/index.jade
@@ -2,76 +2,32 @@ extends layout
 
 block content
     div.container
-        h1.red= data[0].redscore
-        h1.blue= data[0].bluescore
+        h1.red= "0"
+        h1.blue= "0"
         div.redplayers
-            each item in data
-                each scores, player in item.redtopplayers
-                    div.player
-                        p.playername= player
-                        br
-                        img.avatar(src="./images/#{player}.png")
-                        br
-                        p.kdr= scores[0]
-                    div.talents
-                        div.talentscontainer
-                            each score in scores
-                                if score == 27
-                                    img.talent(src="./images/frosttrap.png")= score
-                                else if score == 36
-                                    img.talent(src="./images/explosivearrow.png")= score
-                                else if score == 28
-                                    img.talent(src="./images/thrillofthekill.png")= score
-                                else if score == 37
-                                    img.talent(src="./images/lunge.png")= score
-                                else if score == 30
-                                    img.talent(src="./images/hook.png")= score
-                                else if score == 39
-                                    img.talent(src="./images/quake.png")= score
-                                else if score == 41
-                                    img.talent(src="./images/laststand.png")= score
-                                else if score == 34
-                                    img.talent(src="./images/rallyingcry.png")= score
-                                else if score == 43
-                                    img.talent(src="./images/silence.png")= score
-                                else if score == 35
-                                    img.talent(src="./images/lifeshield.png")= score
-                                else if score == 44
-                                    img.talent(src="./images/freyjiasarrow.png")= score
         div.blueplayers
-            each item in data
-                each scores, player in item.bluetopplayers
-                    div.player
-                        p.playername= player
-                        br
-                        img.avatar(src="./images/#{player}.png")
-                        br
-                        p.kdr= scores[0]
-                    div.talents
-                        div.talentscontainer
-                            each score in scores
-                                if score == 27
-                                    img.talent(src="./images/frosttrap.png")= score
-                                else if score == 36
-                                    img.talent(src="./images/explosivearrow.png")= score
-                                else if score == 28
-                                    img.talent(src="./images/thrillofthekill.png")= score
-                                else if score == 37
-                                    img.talent(src="./images/lunge.png")= score
-                                else if score == 30
-                                    img.talent(src="./images/hook.png")= score
-                                else if score == 39
-                                    img.talent(src="./images/quake.png")= score
-                                else if score == 41
-                                    img.talent(src="./images/laststand.png")= score
-                                else if score == 34
-                                    img.talent(src="./images/rallyingcry.png")= score
-                                else if score == 43
-                                    img.talent(src="./images/silence.png")= score
-                                else if score == 35
-                                    img.talent(src="./images/lifeshield.png")= score
-                                else if score == 44
-                                    img.talent(src="./images/freyjiasarrow.png")= score
+            //if score == 27
+            //    img.talent(src="./images/frosttrap.png")= score
+            //else if score == 36
+            //    img.talent(src="./images/explosivearrow.png")= score
+            //else if score == 28
+            //    img.talent(src="./images/thrillofthekill.png")= score
+            //else if score == 37
+            //    img.talent(src="./images/lunge.png")= score
+            //else if score == 30
+            //    img.talent(src="./images/hook.png")= score
+            //else if score == 39
+            //    img.talent(src="./images/quake.png")= score
+            //else if score == 41
+            //    img.talent(src="./images/laststand.png")= score
+            //else if score == 34
+            //    img.talent(src="./images/rallyingcry.png")= score
+            //else if score == 43
+            //    img.talent(src="./images/silence.png")= score
+            //else if score == 35
+            //    img.talent(src="./images/lifeshield.png")= score
+            //else if score == 44
+                img.talent(src="./images/freyjiasarrow.png")= score
     div.points
         p(class="lower point")= "lower"
         br
