--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -136,7 +136,7 @@ body {
 }
 
 .headercontainer {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
 }
 
@@ -146,6 +146,7 @@ body {
     color: #fefefe;
     width: 20%;
     text-align: center;
+    border-bottom-left-radius: 5px;
 
     background: rgba(236, 79, 70, 1);
     background: -moz-linear-gradient(top, rgba(236, 79, 70, 1) 0%, rgba(231, 49, 29, 1) 100%);
@@ -164,13 +165,13 @@ body {
     font-size: 50px;
     color: #404040;
 
-    background: rgba(148, 152, 158, 1);
-    background: -moz-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 100%);
+    background: rgba(148, 152, 158, .5);
+    background: -moz-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 50%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(148, 152, 158, 1)), color-stop(100%, rgba(124, 128, 136, 1)));
-    background: -webkit-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 100%);
-    background: -o-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 100%);
-    background: -ms-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 100%);
-    background: linear-gradient(to bottom, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 50%);
+    background: -o-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 50%);
+    background: -ms-linear-gradient(top, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 50%);
+    background: linear-gradient(to bottom, rgba(148, 152, 158, 1) 0%, rgba(124, 128, 136, 1) 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#94989e', endColorstr='#7c8088', GradientType=0);
 }
 
@@ -180,6 +181,7 @@ body {
     color: #fefefe;
     width: 20%;
     text-align: center;
+    border-bottom-right-radius: 5px;
 
     background: rgba(73, 155, 234, 1);
     background: -moz-linear-gradient(top, rgba(73, 155, 234, 1) 0%, rgba(32, 124, 229, 1) 100%);
