--- a/views/index.jade
+++ b/views/index.jade
@@ -44,6 +44,7 @@ block content
             p.announceplayer.redgradient= "Cryptite"
 
     div.redstats
+        p.redname= "Red Team"
         table
             thead
                 tr
@@ -59,6 +60,7 @@ block content
                     th= "1"
                     th= "2"
     div.bluestats
+        p.bluename= "Blue Team"
         table
             thead
                 tr
