--- a/views/dash.jade
+++ b/views/dash.jade
@@ -6,6 +6,11 @@ block content
     a(href="#" class="hidestats")= "Hide"
     br
     p.statstate= "----"
+    br
+    br
+    input.red= "Team1"
+    input.blue= "Team2"
+    button.submitversus= "Submit versus"
 
     script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js")
     script(src="./js/dash.js")
