--- a/views/index.jade
+++ b/views/index.jade
@@ -4,32 +4,12 @@ block content
     div.headercontainer
         div.header
             h1.red= "0"
-            h1.mid= "Loka"
+            div.mid
+                h1= "Rumble"
+                p.url= "lokamc.com"
             h1.blue= "0"
     div.redplayers
     div.blueplayers
-        //if score == 27
-        //    img.talent(src="./images/frosttrap.png")= score
-        //else if score == 36
-        //    img.talent(src="./images/explosivearrow.png")= score
-        //else if score == 28
-        //    img.talent(src="./images/thrillofthekill.png")= score
-        //else if score == 37
-        //    img.talent(src="./images/lunge.png")= score
-        //else if score == 30
-        //    img.talent(src="./images/hook.png")= score
-        //else if score == 39
-        //    img.talent(src="./images/quake.png")= score
-        //else if score == 41
-        //    img.talent(src="./images/laststand.png")= score
-        //else if score == 34
-        //    img.talent(src="./images/rallyingcry.png")= score
-        //else if score == 43
-        //    img.talent(src="./images/silence.png")= score
-        //else if score == 35
-        //    img.talent(src="./images/lifeshield.png")= score
-        //else if score == 44
-            img.talent(src="./images/freyjiasarrow.png")= score
     div.points
         p(class="lower point")= "lower"
         br
