--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -249,6 +249,56 @@ body {
     background: rgba(214, 219, 228, 1);
 }
 
+.kills {
+    position: absolute;
+    top: 459px;
+    right: 100px;
+    width: 105px;
+}
+
+.kill {
+    width: 100%;
+    height: 30px;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    opacity: 0;
+}
+
+.killer {
+    display: inline-block;
+    float: left;
+    width: 32px;
+}
+
+.victim {
+    display: inline-block;
+    float: right;
+    width: 32px;
+}
+
+.kill-red.kill {
+    background: rgba(192, 61, 60, 1);
+    background: -moz-linear-gradient(top, rgb(192, 61, 60) 0%, rgba(115, 14, 12, 1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(192, 61, 60, 1)), color-stop(100%, rgba(115, 14, 12, 1)));
+    background: -webkit-linear-gradient(top, rgba(192, 61, 60, 1) 0%, rgba(115, 14, 12, 1) 100%);
+    background: -o-linear-gradient(top, rgba(192, 61, 60, 1) 0%, rgba(115, 14, 12, 1) 100%);
+    background: -ms-linear-gradient(top, rgba(192, 61, 60, 1) 0%, rgba(115, 14, 12, 1) 100%);
+    background: linear-gradient(to bottom, rgba(192, 61, 60, 1) 0%, rgba(115, 14, 12, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ec4f46', endColorstr='#e7311d', GradientType=0);
+}
+
+.kill-blue.kill {
+    background: rgba(53, 82, 157, 1);
+    background: -moz-linear-gradient(top, rgb(53, 82, 157) 0%, rgb(53, 82, 157) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(53, 82, 157, 1)), color-stop(100%, rgba(4, 32, 103, 1)));
+    background: -webkit-linear-gradient(top, rgba(53, 82, 157, 1) 0%, rgba(4, 32, 103, 1) 100%);
+    background: -o-linear-gradient(top, rgba(53, 82, 157, 1) 0%, rgba(4, 32, 103, 1) 100%);
+    background: -ms-linear-gradient(top, rgba(53, 82, 157, 1) 0%, rgba(4, 32, 103, 1) 100%);
+    background: linear-gradient(to bottom, rgba(53, 82, 157, 1) 0%, rgba(4, 32, 103, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#499bea', endColorstr='#207ce5', GradientType=0)
+}
+
 .point {
     font-size: 22px;
     text-transform: uppercase;
