--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -193,6 +193,28 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ec4f46', endColorstr='#e7311d', GradientType=0);
 }
 
+.statsbuttons {
+    margin: 0 auto;
+}
+
+.statsbutton {
+    display: block;
+    font-size: 50px;
+    color: #fefefe;
+    width: 50%;
+    text-align: center;
+    border-radius: 15px;
+
+    background: rgba(156, 156, 156, 1);
+    background: -moz-linear-gradient(top, rgba(156, 156, 156, 1) 0%, rgba(128, 128, 128, 1) 44%, rgba(97, 97, 97, 1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(156, 156, 156, 1)), color-stop(44%, rgba(128, 128, 128, 1)), color-stop(100%, rgba(97, 97, 97, 1)));
+    background: -webkit-linear-gradient(top, rgba(156, 156, 156, 1) 0%, rgba(128, 128, 128, 1) 44%, rgba(97, 97, 97, 1) 100%);
+    background: -o-linear-gradient(top, rgba(156, 156, 156, 1) 0%, rgba(128, 128, 128, 1) 44%, rgba(97, 97, 97, 1) 100%);
+    background: -ms-linear-gradient(top, rgba(156, 156, 156, 1) 0%, rgba(128, 128, 128, 1) 44%, rgba(97, 97, 97, 1) 100%);
+    background: linear-gradient(to bottom, rgba(156, 156, 156, 1) 0%, rgba(128, 128, 128, 1) 44%, rgba(97, 97, 97, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9c9c9c', endColorstr='#616161', GradientType=0);
+}
+
 .mid {
     display: inline-block;
     width: 20%;
