Move points up, little wider Stats fix, team names, etc

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,10 +4,12 @@ block content
     div.headercontainer
         div.header
             h1.red= "0"
+                p.rednamescore= "Red Team"
             div.mid
                 h1= "Rumble"
-                p.url= "lokamc.com"
+                    p.url= "lokamc.com"
             h1.blue= "0"
+                p.bluenamescore= "Blue Team"
     div.redplayers
     div.blueplayers
     div.points
