--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -177,11 +177,12 @@ body {
 
 .red {
     display: inline-block;
-    font-size: 50px;
+    font-size: 40px;
     color: #fefefe;
     width: 20%;
     text-align: center;
-    border-bottom-left-radius: 5px;
+    border-bottom-left-radius: 10px;
+    height: 67px;
 
     background: rgba(192, 61, 60, 1);
     background: -moz-linear-gradient(top, rgb(192, 61, 60) 0%, rgba(115, 14, 12, 1) 100%);
@@ -193,13 +194,21 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ec4f46', endColorstr='#e7311d', GradientType=0);
 }
 
+.rednamescore, .bluenamescore, .url {
+    display: inline-block;
+    width: 100%;
+    font-size: 20px;
+    color: #fefefe;
+    margin-top: -6px;
+}
+
 .statsbuttons {
     margin: 0 auto;
 }
 
 .statsbutton {
     display: block;
-    font-size: 50px;
+    font-size: 40px;
     color: #fefefe;
     width: 50%;
     text-align: center;
@@ -222,7 +231,8 @@ body {
     font-size: 50px;
     color: #404040;
     padding: 5px 5px 0;
-    border-radius: 5px;
+    height: 94px;
+    margin-top: 3px;
 
     background: rgba(214, 219, 228, 1);
 }
@@ -233,22 +243,17 @@ body {
 }
 
 .url {
-    position: absolute;
-    top: 83px;
-    left: 326px;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
     color: #404040;
 }
 
 .blue {
     display: inline-block;
-    font-size: 50px;
+    font-size: 40px;
     color: #fefefe;
     width: 20%;
     text-align: center;
-    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 10px;
+    height: 67px;
 
     background: rgba(53, 82, 157, 1);
     background: -moz-linear-gradient(top, rgb(53, 82, 157) 0%, rgb(53, 82, 157) 100%);
@@ -263,8 +268,8 @@ body {
 .points {
     position: absolute;
     right: 0;
-    top: 319px;
-    width: 105px;
+    top: 290px;
+    width: 125px;
     padding: 10px;
     border-radius: 5px 0 0 5px;
 
@@ -325,6 +330,7 @@ body {
     font-size: 22px;
     text-transform: uppercase;
     color: #191919;
+    margin-left: 25px;
 }
 
 .point.point-red {
