--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -210,8 +210,10 @@ body {
     display: block;
     font-size: 40px;
     color: #fefefe;
-    width: 50%;
+    width: 100%;
+    height: 200px;
     text-align: center;
+    vertical-align: middle;
     border-radius: 15px;
 
     background: rgba(156, 156, 156, 1);
